--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,85 +1,85 @@
 /* @import './base.css'; */
 
 @font-face {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 100;
-    src: url('@/assets/fonts/Roboto-Thin.ttf') format('truetype');
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 100;
+  src: url("@/assets/fonts/Roboto-Thin.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: 'Roboto';
-    font-style: italic;
-    font-weight: 100;
-    src: url('@/assets/fonts/Roboto-ThinItalic.ttf') format('truetype');
+  font-family: "Roboto";
+  font-style: italic;
+  font-weight: 100;
+  src: url("@/assets/fonts/Roboto-ThinItalic.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 300;
-    src: url('@/assets/fonts/Roboto-Light.ttf') format('truetype');
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 300;
+  src: url("@/assets/fonts/Roboto-Light.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: 'Roboto';
-    font-style: italic;
-    font-weight: 300;
-    src: url('@/assets/fonts/Roboto-LightItalic.ttf') format('truetype');
+  font-family: "Roboto";
+  font-style: italic;
+  font-weight: 300;
+  src: url("@/assets/fonts/Roboto-LightItalic.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    src: url('@/assets/fonts/Roboto-Regular.ttf') format('truetype');
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  src: url("@/assets/fonts/Roboto-Regular.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: 'Roboto';
-    font-style: italic;
-    font-weight: 400;
-    src: url('@/assets/fonts/Roboto-Italic.ttf') format('truetype');
+  font-family: "Roboto";
+  font-style: italic;
+  font-weight: 400;
+  src: url("@/assets/fonts/Roboto-Italic.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 500;
-    src: url('@/assets/fonts/Roboto-Medium.ttf') format('truetype');
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  src: url("@/assets/fonts/Roboto-Medium.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: 'Roboto';
-    font-style: italic;
-    font-weight: 500;
-    src: url('@/assets/fonts/Roboto-MediumItalic.ttf') format('truetype');
+  font-family: "Roboto";
+  font-style: italic;
+  font-weight: 500;
+  src: url("@/assets/fonts/Roboto-MediumItalic.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    src: url('@/assets/fonts/Roboto-Bold.ttf') format('truetype');
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  src: url("@/assets/fonts/Roboto-Bold.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: 'Roboto';
-    font-style: italic;
-    font-weight: 700;
-    src: url('@/assets/fonts/Roboto-BoldItalic.ttf') format('truetype');
+  font-family: "Roboto";
+  font-style: italic;
+  font-weight: 700;
+  src: url("@/assets/fonts/Roboto-BoldItalic.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 900;
-    src: url('@/assets/fonts/Roboto-Black.ttf') format('truetype');
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 900;
+  src: url("@/assets/fonts/Roboto-Black.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: 'Roboto';
-    font-style: italic;
-    font-weight: 900;
-    src: url('@/assets/fonts/Roboto-BlackItalic.ttf') format('truetype');
+  font-family: "Roboto";
+  font-style: italic;
+  font-weight: 900;
+  src: url("@/assets/fonts/Roboto-BlackItalic.ttf") format("truetype");
 }
